# Linux-learning

./: .gitignore  GNUCLIB.c  README.md  backtrace.c  base64.c  binutils.md  dbm1.c  device.c  distribution.md  distributionFileSystem.md  enverment.c  errno_t.c  exec_calls.c  garbage_collect.c  gc.md  getopt.c  hash.c  libevent.c  locale.txt  marco.c  netio.tar.gz.1  ookk  other.c  password.c  permstring.c  pkg-config.md  practice.c  ranlib.Readme  security_control.md  sem1.c  sysconf.c  va.c  yy
CPP/: NAN.cpp  NRVO.md  Qus.cpp  README.md  RTTI.md  overloadOp.cpp
CPP/STL/: Makefile  README.md  STL-effect.txt  allocator.cpp  contptr.cpp  copy3.cpp  exception.cpp  for_each.cpp  forward_list.cpp  i18n.cpp  ioiter1.cpp  iterator.cpp  list.cpp  map.cpp  mapcmp.cpp  memfunla.cpp  ostriter.cpp  queuq1.cpp  set-example.cpp  set2.cpp  sort.cpp  sortset.cpp  sorttest.cpp  stack1.cpp  stl-compare.cpp  string.cpp  transf1.cpp  valarrays-test.cpp  vector.cpp
CPP/boost/: Makefile  REAMD.md  variant_t.cpp
CPP/gtest/: readme
CPP/iod/: readme.md
CPP/std11/: .ycm_extra_conf.py  Makefile  README.md  alg  algorithms.cpp  array.cpp  atomic.cpp  chrono.cpp  constexpr  constexpr.cpp  deleteControl.cpp  for-loop-range-based.cpp  function.cpp  initializer_list  initializer_list.cpp  lambda.cpp  list.md  noexcept.cpp  nullptr.cpp  othersFeature.cpp  regex.README  regex.cpp  rightValueReference  rightValueReference.cpp  static_assert.cpp  tuple  tuple.cpp  unique_ptr.cpp  unordered.cpp  varTemplateParameter  varTemplateParameter.cpp
CPP/std17/: a.out  std17.cpp  std17.s
CPP/template/: README.txt  binary.hpp  c11-type_traits.cpp  memberTempFun.cpp  sumpolicy1.hpp  tem.cpp  template-template-parameters.cpp  test.cpp  tracers-6.6.4.cpp  typeTraits.cpp
ELF-file-node/: README.md  a1.c  a2.c  b1.c  b2.c  linderAndLoader.md  link.ld  main.c  objdump.readme  readelf.reamdme  test.c  test.cpp  x.c
Skynet/: Makefile  README  TODO  bench.conf  build_make.sh  online.tcl  premake4.lua  tags
Skynet/config/: bench.conf  bind.conf
Skynet/sample/: Makefile  a.out  client.c  test.c  test.h
Skynet/src/: bindconf.c  bindconf.h  daemon.c  daemon.h  dll.c  dll.h  log.c  log.h  main.c  mcast.c  mcast.h  net.c  net.h  net_if.c  net_if.h  service.c  service.h  shmq.c  shmq.h  tags  util.c  util.h
autotools/: Makefile.am  README.md  configure.ac
autotools/src/: Makefile.am  main.c
color/: color  color.c
coroutine/: coroutine.md  test.c
coroutine/coroutine-master/: main
curl/: Makefile  test.c
daemon/: .fuse_hidden0000002800000001  README.md  configure.scan  daemon  daemon.c
dht/: readme.md
dirty/: Makefile  README  TODO  coding.README  dirtyTable.cpp  dirtyTable.hpp  dirty_system.README  dirty_table.conf  huang.txt  main.cpp  multiwayTree.hpp  unit.c  unit.cpp  utf8_encode.h
encoding/: RC.md
epoll/: README  epoll  epoll.c  pipe_epoll.c
fifo/: pip_writer.c  pipe.README  popen1.c
fifo/fifo_server_client/: fifo_client.c  fifo_read.c  pip_read.c
gc/: gc.md
gcc-features-node/: Makefile  README.md  __alignof__.c  __builtin_trap.c  __sync.c  __unbounded.c  atomic.c  attributes.c  builitins.c  cyg_profile_func.c  macro.c  not-invoke-nullfunc.c  test.c
io-system/: README.md  async_io.c  ch5-test.c  check_file_exist.c  exe.c  fcntl.h  g_aio.c  listchars.c  lock1.c  lock2.c  lock3_region_test.c  lock_5_competing_locks.c  noblock.c  open_terminal  open_terminal.c  p5.2.c  printf.c  seek  seek.c  select_t.c  signalDrivenIO.c  stat.c  test-select.c
kernel/: README  boot.md  etc-default-grub  grub.md  hlist.c  init.md  kernel.md  list.c  memory.md  process.md
kernel/module/: Makefile  README  hello.c  lock.h  scull_mod.c  scull_use.c
kernel/uio/: Makefile  myuio_ker.c  myuio_usr.py  uio.md
lVM/: .gitignore  Makefile  ast  ast.md  gc.md  instructions.md  readme.md
lVM/src/: ast  ast.cpp  ins.cpp  ins.hpp  main.cpp  vm.cpp  vm.hpp
linux/: atoi_t.c  device.c  enverment.c  getopt.c  libevent.c  memroy.c  menu1.c  other.c  setjmp.c  tt.c
linux/daemon/: README.md  daemon.c
linux/epoll/: Makefile  README  epoll.c
llvm/: llvm.readme
m4-note/: Makefile  README.md  m4.readme  monster.lua  monster.lua.m4  test.m4
make/: Makefile  README.make  cmake.readm  premake4.lua  test1  test1.c  test2  test2.c
make/cmake/: CMakeLists.txt  cmake.readm  lib.c  lib.h  test_1.c  test_2.c  test_3.c
make/cmake/some_code/: b1.c  b1.h  bb.c
make/cmake/some_code/b2/: b2.c  b2.h
make/cmake/third_libs/other1/: CMakeLists.txt  other.c  other.h
md5/: Makefile  main.c  md5calc.c  md5calc.h
memory/: Makefile  malloc.README  mmap  mmap.README  mmap.c
mpi/: Makefile  README.md  test.c
my-utility-lib/: install_zhao_include.sh
mysql/: sql_connect.c  sql_insert.c
open-tools/: README
opencv/: bindingbox.py  cameo.py  cv.readme  faceDetecting.md  filters.py  hpf.py  lines.py  po.py  readm.md  showCamera.py  s数字图像处理.md
process/: Makefile  README  env.c  exec.c  psf.c  wait.c
pthread/: Makefile  PTHREAD.md  README.md  alarm_for.c  alarm_mutex.c  alarm_thread.c  buf.c  cond_static.c  create_thread.c  gettid.c  join.c  mutex.c  pipe-threads.c  pipe_threads.c  pipeline.cpp  pthead.readme  rwlock.c  show-two-result.sh  sigwait_t.c  twothread-write.c  wait-about.c  why-use-pthread.md
serial-port/: README.md
shared-lib/: LD_RPATH.readme  README  main.c  makefile  s.h  s1.c  s2.c  s3.c
signals/: .fuse_hidden0000024800000002  Makefile  READER.md  cheach_signal  noreenter_func  signal  signal.c  sigpromask  sigpromask.c
socket/: .README.swp  README  getifaddr.c  sendfile.c  socketpair.c  sockopt.c  syncookie.readme
ssl/: Makefile  README  andyhuang.p12  andyhuang.pem  aps_development.cer  bio  bio.c  push  push_cer.pem  ssl.c  ssl.pem  ssl.readme  tt  tt.c  xx.c
stdlib/: Makefile  rand.c
ternimal/: README.md  test.c
time/: README.md  alarm  alarm.c  posix_clock  strftime_t.c  tz.c
vm/: vm.md
xdr/: Makefile  README  reader.c  t.c  t.h  t.x  t_xdr.c  writer.c
xrd/: Makefile  README  t.c  t.h  t.x  t_xdr.c
zhao-utility/: README.md
zookeeper/: README.md  worker.erl
(+115 files in other folders)
